# jni-on-linux

./: .gitignore  Cargo.toml  frida-debug.js
examples/: spotify-hashcash.rs
examples/dlopen/: Cargo.toml  build.rs
examples/dlopen/src/: main.rs  store.c  store.h  wrapper.c  wrapper.h
examples/linking/: Cargo.toml  build.rs
examples/linking/src/: main.rs  math.h
examples/spotify-hashcash/: Cargo.toml
examples/spotify-hashcash/src/: main.rs
examples/ttencrypt/: Cargo.toml
examples/ttencrypt/src/: main.rs
jni-loader/: Cargo.toml
jni-loader/src/: debug.rs  dlfcn.rs  jni.rs  lib.rs  locate.rs  mmap.rs  plt.rs
jni-loader/src/dlfcn/: aarch64.rs  x86_64.rs
jni-loader/src/plt/: x86_64.rs
jni-loader/tests/: tests.rs
jni-loader/tests/linking/: power.h
src/: jni.rs  lib.rs  locate.rs  mmap.rs  plt.rs
src/plt/: aarch64.rs  x86_64.rs
tests/: build-native.sh  native-lib.c  tests.rs
tests/linking/: build.sh  main.c  math.c  power.c
