[workspace]

[package]
name = "jni-loader"
edition = "2021"
version = "0.1.0"
authors = ["shallowrain"]
description = "Load Android shared libraries on Linux"
license = "MIT"
repository = "https://github.com/shallowrayn/jni-on-linux"
exclude = ["test"]

[features]
default = ["inline-asm"]
inline-asm = []

[dependencies]
auxv = "0.3.3"
elf = "0.7.4"
log = "0.4.20"
thiserror = "1.0.56"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27.1", features = ["mman", "feature"] }

[dev-dependencies]
anyhow = "1.0.79"
env_logger = "0.11.1"
hex = "0.4.3"
test-log = "0.2.14"
