[package]
name = "jni-loader"
edition = "2021"
version = "0.1.0"
authors = ["shallowrain"]
description = "Load Android shared libraries on Linux"
license = "MIT"
repository = "https://github.com/shallowrayn/jni-on-linux"

[features]
default = ["inline-asm"]
inline-asm = []

[dependencies]
auxv = "0.3.3"
elf = "0.7.4"
log = "0.4.20"
thiserror = "1.0.56"
nix = { version = "0.27.1", features = ["mman", "feature"] }
procfs = { version = "0.16.0", default-features = false }
