[package]
name = "spotify-hashcash"
version = "0.1.0"
edition = "2021"
autobins = false

[[example]]
name = "spotify-hashcash"
path = "src/main.rs"

[features]
qbdi = ["qbdi-sys2"]

[dependencies]
jni-loader = { path = "../../jni-loader" }
hex = "0.4.3"
env_logger = "0.11.1"
libc = "0.2.153"
anyhow = "1.0.81"
qbdi-sys2 = { git = "https://github.com/shallowrayn/qbdi-sys2", optional = true }
